eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Cash_Order__c.object
<CustomObject>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Cash Orders</relationshipLabel>
        <relationshipName>Cash_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Cash_Order_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Order Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cash_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cash_supply_charge__c</fullName>
        <formula>((X50_Amount__c  +  X20_Amount__c  +  X10_Amount__c  +  X5_Amount__c) /100)*0.125</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash supply charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Coin_charge__c</fullName>
        <formula>Num_Coin_Bags__c  * 1.43</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coin charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Charge__c</fullName>
        <label>Delivery Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deputy_Branch_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Copied from the Branch Record and used for email templates</description>
        <label>Deputy Branch Manager (Copy)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cash_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Num_Coin_Bags__c</fullName>
        <label># of Coin Bags</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Royal_Mail_Cash_Order_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Royal Mail Cash Order Request</label>
        <referenceTo>Royal_Mail_Cash_Order_Request__c</referenceTo>
        <relationshipLabel>Cash Orders</relationshipLabel>
        <relationshipName>Cash_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Royal_Mail_Order_Sent_Status__c</fullName>
        <formula>TEXT(Royal_Mail_Cash_Order_Request__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Royal Mail Order Sent Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sell_Off_Amount__c</fullName>
        <label>Sell Off Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Cash_Amount__c</fullName>
        <formula>X50_Amount__c + X20_Amount__c + X10_Amount__c + X5_Amount__c + X2_Amount__c + X1_Amount__c + X50p_Amount__c + X20p_Amount__c + X10p_Amount__c + X5p_Amount__c + X2p_Amount__c + X1p_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cash Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X10_Amount__c</fullName>
        <label>£10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X10p_Amount__c</fullName>
        <label>10p</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1_Amount__c</fullName>
        <label>£1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1p_Amount__c</fullName>
        <label>1p</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X20_Amount__c</fullName>
        <label>£20</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X20p_Amount__c</fullName>
        <label>20p</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>delivery_charge_new__c</fullName>
        <formula>IF( total_cash_order_supply_and_collection__c  &lt;= 25000 &amp;&amp; total_cash_order_supply_and_collection__c   &gt; 1, 28.45, 
IF( total_cash_order_supply_and_collection__c   &gt;  25000   &amp;&amp; total_cash_order_supply_and_collection__c   &lt;= 50000 , 32.95,
IF( total_cash_order_supply_and_collection__c   &gt;  50000 &amp;&amp; total_cash_order_supply_and_collection__c   &lt;= 75000, 37.45,
IF( total_cash_order_supply_and_collection__c   &gt;  75000 &amp;&amp; total_cash_order_supply_and_collection__c   &lt;= 100000, 41.95, 

0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>delivery charge new</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>total_cash_order_supply_and_collection__c</fullName>
        <formula>X10_Amount__c  +  X20_Amount__c  +  X5_Amount__c  +  X50_Amount__c  +  Sell_Off_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>total cash order (supply and collection)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Cash Order</label>
    <nameField>
        <displayFormat>CO-{000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Orders</pluralLabel>
    <recordTypes>
        <fullName>Emergency_Cash_Order</fullName>
        <active>true</active>
        <description>An ad hoc emergency cash order.</description>
        <label>Emergency Cash Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Cash_Order</fullName>
        <active>true</active>
        <description>A standard cash order - must be submitted for approval by Monday each week.</description>
        <label>Standard Cash Order</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Record_In_Approval</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Status__c, &quot;Submitted for Approval&quot;)</errorConditionFormula>
        <errorMessage>Record is in Approval and cannot be edited</errorMessage>
    </validationRules>
</CustomObject>